--- a/style/main.css
+++ b/style/main.css
@@ -71,7 +71,7 @@ h1.title {
   line-height: 47px;
   font-weight: bold;
   border-radius: 3px;
-  color: white;
+  color: #474545;
   margin-top: 8px;
   text-align: center;
 }
@@ -84,7 +84,7 @@ h1.title {
   font-size: 13px;
   line-height: 13px;
   text-align: center;
-  color: #eee4da;
+  color: #aa530e;
 }
 .score-container .score-addition, .best-container .score-addition {
   position: absolute;
@@ -168,6 +168,8 @@ hr {
   margin-top: 40px;
   position: relative;
   padding: 15px;
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
   cursor: default;
   -webkit-touch-callout: none;
   -ms-touch-callout: none;
@@ -191,12 +193,13 @@ hr {
   right: 0;
   bottom: 0;
   left: 0;
-  background: rgba(238, 228, 218, 0.5);
+  background: rgba(243, 237, 237, 0.7);
+  color: #776E65;
   z-index: 100;
   text-align: center;
-  -webkit-animation: fade-in 800ms ease 1200ms;
-  -moz-animation: fade-in 800ms ease 1200ms;
-  animation: fade-in 800ms ease 1200ms;
+  -webkit-animation: fade-in 800ms ease 2400ms;
+  -moz-animation: fade-in 800ms ease 2400ms;
+  animation: fade-in 800ms ease 2400ms;
   -webkit-animation-fill-mode: both;
   -moz-animation-fill-mode: both;
   animation-fill-mode: both;
@@ -227,7 +230,7 @@ hr {
   display: none;
 }
 .game-container .game-message.game-won {
-  background: rgba(237, 194, 46, 0.5);
+  background: rgba(170, 83, 14, 0.7);
   color: #f9f6f2;
 }
 .game-container .game-message.game-won a.keep-playing-button {
@@ -260,7 +263,7 @@ hr {
   margin-right: 15px;
   float: left;
   border-radius: 3px;
-  background: rgba(238, 228, 218, 0.35);
+  background: rgba(243, 237, 237, 0.35);
 }
 .grid-cell:last-child {
   margin-right: 0;
@@ -359,51 +362,52 @@ hr {
 
 .tile {
   position: absolute;
-  -webkit-transition: 100ms ease-in-out;
-  -moz-transition: 100ms ease-in-out;
-  transition: 100ms ease-in-out;
+  -webkit-transition: 200ms ease-in-out;
+  -moz-transition: 200ms ease-in-out;
+  transition: 200ms ease-in-out;
   -webkit-transition-property: -webkit-transform;
   -moz-transition-property: -moz-transform;
   transition-property: transform;
 }
 .tile .tile-inner {
   border-radius: 3px;
-  background: #eee4da;
+  background: #f3eded;
   text-align: center;
   font-weight: bold;
   z-index: 10;
   font-size: 55px;
 }
 .tile.tile-2 .tile-inner {
-  background: #eee4da;
+  background: #f3eded;
   background-image: url("../assets/2.png");
   background-position: center;
   background-repeat: no-repeat;
   /* Do not repeat the image */
   background-size: cover;
-  box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
+  box-shadow: 0 0 30px 10px rgba(236, 118, 24, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
 }
 .tile.tile-4 .tile-inner {
-  background: #eee1c9;
+  background: #eee2dd;
   background-image: url("../assets/4.png");
   background-position: center;
   background-repeat: no-repeat;
   /* Do not repeat the image */
   background-size: cover;
-  box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
+  box-shadow: 0 0 30px 10px rgba(236, 118, 24, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
 }
 .tile.tile-8 .tile-inner {
   color: #f9f6f2;
-  background: #f3b27a;
+  background: #e9d7cd;
   background-image: url("../assets/8.png");
   background-position: center;
   background-repeat: no-repeat;
   /* Do not repeat the image */
   background-size: cover;
+  box-shadow: 0 0 30px 10px rgba(236, 118, 24, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
 }
 .tile.tile-16 .tile-inner {
   color: #f9f6f2;
-  background: #f69664;
+  background: #edd8ba;
   background-image: url("../assets/16.png");
   background-position: center;
   background-repeat: no-repeat;
@@ -412,7 +416,7 @@ hr {
 }
 .tile.tile-32 .tile-inner {
   color: #f9f6f2;
-  background: #f77c5f;
+  background: #d18b84;
   background-image: url("../assets/32.png");
   background-position: center;
   background-repeat: no-repeat;
@@ -421,7 +425,7 @@ hr {
 }
 .tile.tile-64 .tile-inner {
   color: #f9f6f2;
-  background: #f75f3b;
+  background: #aa828b;
   background-image: url("../assets/64.png");
   background-position: center;
   background-repeat: no-repeat;
@@ -430,13 +434,12 @@ hr {
 }
 .tile.tile-128 .tile-inner {
   color: #f9f6f2;
-  background: #edd073;
+  background: #956773;
   background-image: url("../assets/128.png");
   background-position: center;
   background-repeat: no-repeat;
   /* Do not repeat the image */
   background-size: cover;
-  box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2380952381), inset 0 0 0 1px rgba(255, 255, 255, 0.1428571429);
   font-size: 45px;
 }
 @media screen and (max-width: 520px) {
@@ -446,13 +449,13 @@ hr {
 }
 .tile.tile-256 .tile-inner {
   color: #f9f6f2;
-  background: #edcc62;
+  background: #cfa07e;
   background-image: url("../assets/256.png");
   background-position: center;
   background-repeat: no-repeat;
   /* Do not repeat the image */
   background-size: cover;
-  box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.3174603175), inset 0 0 0 1px rgba(255, 255, 255, 0.1904761905);
+  box-shadow: 0 0 30px 10px rgba(236, 118, 24, 0.2222222222), inset 0 0 0 1px rgba(255, 255, 255, 0.1333333333);
   font-size: 45px;
 }
 @media screen and (max-width: 520px) {
@@ -462,13 +465,13 @@ hr {
 }
 .tile.tile-512 .tile-inner {
   color: #f9f6f2;
-  background: #edc950;
+  background: #c9956e;
   background-image: url("../assets/512.png");
   background-position: center;
   background-repeat: no-repeat;
   /* Do not repeat the image */
   background-size: cover;
-  box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.3968253968), inset 0 0 0 1px rgba(255, 255, 255, 0.2380952381);
+  box-shadow: 0 0 30px 10px rgba(236, 118, 24, 0.2777777778), inset 0 0 0 1px rgba(255, 255, 255, 0.1666666667);
   font-size: 45px;
 }
 @media screen and (max-width: 520px) {
@@ -478,13 +481,13 @@ hr {
 }
 .tile.tile-1024 .tile-inner {
   color: #f9f6f2;
-  background: #edc53f;
+  background: #c48a5e;
   background-image: url("../assets/1024.png");
   background-position: center;
   background-repeat: no-repeat;
   /* Do not repeat the image */
   background-size: cover;
-  box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.4761904762), inset 0 0 0 1px rgba(255, 255, 255, 0.2857142857);
+  box-shadow: 0 0 30px 10px rgba(236, 118, 24, 0.3333333333), inset 0 0 0 1px rgba(255, 255, 255, 0.2);
   font-size: 35px;
 }
 @media screen and (max-width: 520px) {
@@ -494,13 +497,12 @@ hr {
 }
 .tile.tile-2048 .tile-inner {
   color: #f9f6f2;
-  background: #edc22e;
+  background: #e26a54;
   background-image: url("../assets/2048.png");
   background-position: center;
   background-repeat: no-repeat;
   /* Do not repeat the image */
   background-size: cover;
-  box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.5555555556), inset 0 0 0 1px rgba(255, 255, 255, 0.3333333333);
   font-size: 35px;
 }
 @media screen and (max-width: 520px) {
@@ -508,9 +510,53 @@ hr {
     font-size: 15px;
   }
 }
+.tile.tile-4096 .tile-inner {
+  color: #f9f6f2;
+  background: #dda64d;
+  background-image: url("../assets/4096.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  /* Do not repeat the image */
+  background-size: cover;
+  font-size: 35px;
+}
+@media screen and (max-width: 520px) {
+  .tile.tile-4096 .tile-inner {
+    font-size: 15px;
+  }
+}
+.tile.tile-8192 .tile-inner {
+  color: #f9f6f2;
+  background: #cc8526;
+  background-image: url("../assets/8192.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  /* Do not repeat the image */
+  background-size: cover;
+  font-size: 35px;
+}
+@media screen and (max-width: 520px) {
+  .tile.tile-8192 .tile-inner {
+    font-size: 15px;
+  }
+}
+.tile.tile-16384 .tile-inner {
+  color: #f9f6f2;
+  background: rgba(206, 55, 18, 0.8598039216);
+  background-image: url("../assets/16384.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  /* Do not repeat the image */
+  background-size: cover;
+  font-size: 35px;
+}
+@media screen and (max-width: 520px) {
+  .tile.tile-16384 .tile-inner {
+    font-size: 15px;
+  }
+}
 .tile.tile-super .tile-inner {
   color: #f9f6f2;
-  background: #3c3a33;
   font-size: 30px;
 }
 @media screen and (max-width: 520px) {
@@ -562,9 +608,9 @@ hr {
   }
 }
 .tile-new .tile-inner {
-  -webkit-animation: appear 200ms ease 100ms;
-  -moz-animation: appear 200ms ease 100ms;
-  animation: appear 200ms ease 100ms;
+  -webkit-animation: appear 200ms ease 200ms;
+  -moz-animation: appear 200ms ease 200ms;
+  animation: appear 200ms ease 200ms;
   -webkit-animation-fill-mode: backwards;
   -moz-animation-fill-mode: backwards;
   animation-fill-mode: backwards;
@@ -623,9 +669,9 @@ hr {
 }
 .tile-merged .tile-inner {
   z-index: 20;
-  -webkit-animation: pop 200ms ease 100ms;
-  -moz-animation: pop 200ms ease 100ms;
-  animation: pop 200ms ease 100ms;
+  -webkit-animation: pop 200ms ease 200ms;
+  -moz-animation: pop 200ms ease 200ms;
+  animation: pop 200ms ease 200ms;
   -webkit-animation-fill-mode: backwards;
   -moz-animation-fill-mode: backwards;
   animation-fill-mode: backwards;
@@ -710,6 +756,8 @@ hr {
     margin-top: 40px;
     position: relative;
     padding: 15px;
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
     cursor: default;
     -webkit-touch-callout: none;
     -ms-touch-callout: none;
@@ -733,12 +781,13 @@ hr {
     right: 0;
     bottom: 0;
     left: 0;
-    background: rgba(238, 228, 218, 0.5);
+    background: rgba(243, 237, 237, 0.7);
+    color: #776E65;
     z-index: 100;
     text-align: center;
-    -webkit-animation: fade-in 800ms ease 1200ms;
-    -moz-animation: fade-in 800ms ease 1200ms;
-    animation: fade-in 800ms ease 1200ms;
+    -webkit-animation: fade-in 800ms ease 2400ms;
+    -moz-animation: fade-in 800ms ease 2400ms;
+    animation: fade-in 800ms ease 2400ms;
     -webkit-animation-fill-mode: both;
     -moz-animation-fill-mode: both;
     animation-fill-mode: both;
@@ -769,7 +818,7 @@ hr {
     display: none;
   }
   .game-container .game-message.game-won {
-    background: rgba(237, 194, 46, 0.5);
+    background: rgba(170, 83, 14, 0.7);
     color: #f9f6f2;
   }
   .game-container .game-message.game-won a.keep-playing-button {
@@ -802,7 +851,7 @@ hr {
     margin-right: 15px;
     float: left;
     border-radius: 3px;
-    background: rgba(238, 228, 218, 0.35);
+    background: rgba(243, 237, 237, 0.35);
   }
   .grid-cell:last-child {
     margin-right: 0;
