--- a/style/main.scss
+++ b/style/main.scss
@@ -1,4 +1,5 @@
 @import "helpers.scss";
+@import "variables.scss";
 @import "fonts/clear-sans.css";
 
 $field-width: 500px;
@@ -25,11 +26,12 @@ html, body {
   margin: 0;
   padding: 0;
 
-  background: #faf8ef;
+  background: $lightColor;
   color: $text-color;
   font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
   font-size: 18px;
 }
+
 
 body {
   margin: 80px 0;
