--- a/style/home.scss
+++ b/style/home.scss
@@ -2,7 +2,7 @@
 
 
 body {
-  background-color: $lightColor;
+  background-color: $lighterColor;
   // background-color: #4592af;
 }
 
@@ -11,12 +11,25 @@ body {
   z-index: 2;
 }
 
-#background {
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  width: 40%;
-  height: 100%;
-  background-color: $lightColor;
-  z-index: -1;
+.by-area{
+  border-radius: 20px;
+  background-color: white;    
+  backdrop-filter: blur( 4px );
+  -webkit-backdrop-filter: blur( 4px );
+  box-shadow: 0 1px 1px $greyColor;
+}
+
+h1.title {
+  font-size: 50px;
+  font-weight: bold;
+  margin: 0;
+  display: block;
+  float: left;
+}
+.button {
+  @include button;
+
+}
+a:hover{
+  color: $bright-text-color !important;
 }
