--- a/style/home.css
+++ b/style/home.css
@@ -1,19 +1,55 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  color: #776E65;
+  font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
+  font-size: 18px;
+}
+
+a {
+  color: #776E65;
+  font-weight: bold;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 body {
-  background-color: #d7eaea;
+  background-color: #f6e1b8;
 }
 
 .container {
   z-index: 2;
 }
 
-#background {
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  width: 40%;
-  height: 100%;
-  background-color: #d7eaea;
-  z-index: -1;
+.by-area {
+  border-radius: 20px;
+  background-color: white;
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  box-shadow: 0 1px 1px #69779b;
+}
+
+h1.title {
+  font-size: 50px;
+  font-weight: bold;
+  margin: 0;
+  display: block;
+  float: left;
+}
+
+.button {
+  display: inline-block;
+  background: #8f7a66;
+  border-radius: 3px;
+  padding: 0 20px;
+  text-decoration: none;
+  color: #f9f6f2;
+  height: 40px;
+  line-height: 42px;
+}
+
+a:hover {
+  color: #f9f6f2 !important;
 }
 
 /*# sourceMappingURL=home.css.map */
