--- a/style/variables.css
+++ b/style/variables.css
@@ -1,3 +1,16 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  color: #776E65;
+  font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
+  font-size: 18px;
+}
 
+a {
+  color: #776E65;
+  font-weight: bold;
+  text-decoration: underline;
+  cursor: pointer;
+}
 
 /*# sourceMappingURL=variables.css.map */
